--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css?family=Jua&amp;subset=korean" rel="stylesheet">
 </head>
 <body>
+  
         <header class="container">
                 <div class="row">
                   <h1 class="col-sm-4"><a href="{% url 'board' %}">KSU BLOG</a></h1>
@@ -56,7 +57,7 @@
             </div> 
             <footer class="container">
                     <div class="row">
-                       <p class="col-sm-4">&copy; 2019 ksublog</p>
+                       <p class="col-sm-4">&copy; 2019 ksublog with likelion 7th</p>
                        <ul class="col-sm-8">
                             <li class="col-sm-1"><a href="https://twitter.com/hashtag/%EB%B6%80%EC%82%B0%EA%B2%BD%EC%84%B1%EB%8C%80%ED%95%99%EA%B5%90?lang=ko"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></a></li>
                             <li class="col-sm-1"><a href="https://ko-kr.facebook.com/ksupkudaesin/"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></a></li>
