--- a/blog/templates/board.html
+++ b/blog/templates/board.html
@@ -10,6 +10,12 @@
 <link href="https://fonts.googleapis.com/css?family=Jua&amp;subset=korean" rel="stylesheet">
 </head>
 <body>
+    <audio controls="controls" autostart="true" autoplay="true" loop="true" hidden="true" >
+        <source src="{% static 'audio/moonlight.mp3' %}" type="audio/mp3" />
+        <source src="{% static 'audio/moonlight.mp3' %}" type="audio/ogg" />
+    </audio>
+    
+
     <header class="container">
         <div class="row">
           <h1 class="col-sm-4"><a href="{% url 'board' %}">KSU BLOG</a></h1>
@@ -28,6 +34,7 @@
           </nav>
         </div>
       </header>
+      
   <section class="jumbotron">
     <div class="container">
       <div class="row text-center">
@@ -40,6 +47,15 @@
     </div>
   </section>
   <section class="container">
+      <div id="serif">
+          <!-- Editorial Section - Serif -->
+          <div class="editorial">
+            <h2>내일을 여는 경성</h2>
+            <p>경성대학교 블로그에 오신 것을 환영합니다.</p>
+            <p><em></em></p>
+          </div>
+      <div class="card">
+        
     <div class="row">
         <figure class="col-sm-6">
             <p>캠퍼스 안내</p>
@@ -60,10 +76,17 @@
             <p>about 경성</p>
             <a href="javascript:void(window.open('https://ko.wikipedia.org/wiki/%EA%B2%BD%EC%84%B1%EB%8C%80%ED%95%99%EA%B5%90', '_blank'))"><img src="{% static 'img/ksu.jpg' %}"height="400px" alt="나무위키"></a>
           </figure>
+          
     </div>
+    <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a href="javascript:void(window.open('http://kscms.ks.ac.kr/kor/CMS/Contents/Contents.do?mCode=MN032', '_blank'))">인사말</a></li>
+        <li class="list-group-item"><a href="javascript:void(window.open('http://kscms.ks.ac.kr/kor/CMS/Board/Board.do?mCode=MN091', '_blank'))">교내소식</a></li>
+        <li class="list-group-item"><a href="javascript:void(window.open('https://cms1.ks.ac.kr/WEB-APP/NameDepartmentSearch/list.do', '_blank'))">연락처</a></li>
+        <li class="list-group-item"><a href="javascript:void(window.open('http://www.eatc.co.kr/_upfile/onplace_img/%EA%B2%BD%EC%84%B1%EB%8C%80%ED%95%99%EA%B5%90.jpg', '_blank'))">오시는 길</a></li>
+      </ul>
     <footer class="container">
         <div class="row">
-           <p class="col-sm-4">&copy; 2019 ksublog</p>
+           <p class="col-sm-4">&copy; 2019 ksublog with likelion 7th</p>
            <ul class="col-sm-8">
               <li class="col-sm-1"><a href="https://twitter.com/hashtag/%EB%B6%80%EC%82%B0%EA%B2%BD%EC%84%B1%EB%8C%80%ED%95%99%EA%B5%90?lang=ko"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></a></li>
                <li class="col-sm-1"><a href="https://ko-kr.facebook.com/ksupkudaesin/"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></a></li>
