--- a/blog/templates/new.html
+++ b/blog/templates/new.html
@@ -15,6 +15,7 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
+  
     <header class="container">
         <div class="row">
           <h1 class="col-sm-4"><a href="{% url 'board' %}">KSU BLOG</a></h1>
@@ -48,7 +49,7 @@
     <br>
     <footer class="container">
         <div class="row">
-           <p class="col-sm-4">&copy; 2019 ksublog</p>
+           <p class="col-sm-4">&copy; 2019 ksublog with likelion 7th</p>
            <ul class="col-sm-8">
               <li class="col-sm-1"><a href="https://twitter.com/hashtag/%EB%B6%80%EC%82%B0%EA%B2%BD%EC%84%B1%EB%8C%80%ED%95%99%EA%B5%90?lang=ko"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/twitter.svg"></a></li>
               <li class="col-sm-1"><a href="https://ko-kr.facebook.com/ksupkudaesin/"><img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/facebook.svg"></a></li>
